--- a/template/portfolioPage/portfolio.html
+++ b/template/portfolioPage/portfolio.html
@@ -147,6 +147,84 @@
   <section class="webiner__section">
     <div class="main__container"></div>
   </section>
+
+  <!-- blog section -->
+          <section class="blog__section">
+            <div class="blog__container">
+                <h2 class="blog__h1">Our Blog</h1>
+                <h2 class="blog__h2">See what other users are saying about us</h2>
+                <div class="blog__card-wrapper">
+                    <div class="blog__card">
+                        <div class="blog__card-image">
+                            <img src="./images/blog/blog_1.png" alt="">
+                        </div>
+                        <div class="blog__card-body">
+                            <p class="blog__card-text-p">Navigating through seems to be easier than I imagined. Thank you so much. </p>
+                            <hr class="blog__hr">
+                            <h4 class="blog__h4">Prince Dev</h4>
+                        </div>
+                    </div>
+                    <div class="blog__card">
+                        <div class="blog__card-image">
+                            <img src="./images/blog/blog_2.png" alt="">
+                        </div>
+                        <div class="blog__card-body">
+                            <p class="blog__card-text-p">WebBuildr is truly the fastest and easiest website builder.You have a nice interface i must say.</p>
+                            <hr class="blog__hr">
+                            <h4 class="blog__h4">Dev Matthew</h4>
+                        </div>
+                    </div>
+                    <div class="blog__card">
+                        <div class="blog__card-image">
+                            <img src="./images/blog/blog_3.png" alt="">
+                        </div>
+                        <div class="blog__card-body">
+                            <p class="blog__card-text-p">The tutorial videos are helpful and time worthy. I really enjoyed.</p>
+                            <hr class="blog__hr">
+                            <h4 class="blog__h4">Precious Develope</h4>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="blog__card-wrapper1">
+                  <div class="blog__card">
+                      <div class="blog__card-image">
+                          <img src="./images/blog/blog_4.png" alt="">
+                      </div>
+                      <div class="blog__card-body">
+                          <p class="blog__card-text-p">Navigating through seems to be easier than I imagined. Thank you so much.</p>
+                          <hr class="blog__hr">
+                          <h4 class="blog__h4">Prince Dev</h4>
+                      </div>
+                  </div>
+                  <div class="blog__card">
+                      <div class="blog__card-image">
+                          <img src="./images/blog/blog_5.png" alt="">
+                      </div>
+                      <div class="blog__card-body">
+                          <p class="blog__card-text-p">WebBuildr is truly the fastest and easiest website builder.You have a nice interface i must say.</p>
+                          <hr class="blog__hr">
+                          <h4 class="blog__h4">Dev Matthew</h4>
+                      </div>
+                  </div>
+                  <div class="blog__card">
+                      <div class="blog__card-image">
+                          <img src="./images/blog/blog_6.png" alt="">
+                      </div>
+                      <div class="blog__card-body">
+                          <p class="blog__card-text-p">The tutorial videos are helpful and time worthy. I really enjoyed.</p>
+                          <hr class="blog__hr">
+                          <h4 class="blog__h4">Precious Develope</h4>
+                      </div>
+                  </div>
+              </div>
+
+              <div class="blog__card-body1">
+                <p class="blog__card1-text-p"><a href="" class="btn">Read More</a></p>
+            </div>
+            </div>
+        </section>
+
   <!-- Footer -->
   <footer>
     <div class="row">
