--- a/template/templates_folder/portfolio/style.css
+++ b/template/templates_folder/portfolio/style.css
@@ -1,171 +1,147 @@
-
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 
-body{
-        width: 10%;
-        max-width: 1024px;
-        min-height: 100vh;
-}
 
 
+* {
 
-
-html{
-      margin-left: -280px; 
-     margin-right: 0;
-     width: 100%;
-    box-sizing: border-box;
-}
-
-*{
     font-family: "Campton", sans-serif;
-    margin-right: 0;
-    padding-right: 0;
 }
 
-
-.img1{
+.img1 {
     background-image: url('./images/Rectangle\ 111.png');
     height: 552px;
-    width: 389px;
-    background-repeat: no-repeat;
+    width: 667px;
 }
 
-.img2{
+.img2 {
     background-image: url('./images/Rectangle\ 109.png');
     height: 552px;
-    width: 389px;
+    width: 667px;
     background-repeat: no-repeat;
 
 }
 
-.img-name{
+.img-name {
     margin-top: 106px;
-    margin-left: 17px;
+    margin-left: 300px;
 }
 
-.portfolio-img{
+
+.portfolio-img {
     display: flex;
     margin-left: 39px;
     margin-right: 39px;
 
 }
 
-.portfolio-details{
-margin-left: 280px;
-    margin-right: -1000px;
-    max-width: 56.5vw;
-    
-}
 
-.underline{
+.underline {
     background: #2B2E63;
     height: 15px;
-    width: 772px;
+    width: 1333px;
 }
 
-.arianne{
+.arianne {
     color: #242653;
     font-weight: 700;
     font-size: 24px;
     line-height: 28px;
-
 }
 
-.product{
+.product {
     font-weight: 700;
     font-size: 40px;
     line-height: 47px;
     color: #ABD6DF;
 }
 
-.solving{
+.solving {
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
     line-height: 28px;
     color: #515E83;
-}
+    }
 
-.solving span{
+
+.solving span {
     color: #ABD6DF;
 }
-/* 
-.messanger{
-    
-} */
 
-footer{
-    font-weight: 600;
-        font-size: 12px;
-        line-height: 150%;    
-        color: #ABD6DF;
-        margin-top: 170px;
-        margin-left: 200px;
+
+footer {
+font-weight: 600;
+font-size: 12px;
+line-height: 150%;
+color: #ABD6DF;
+margin-top: 100px;
+margin-left: 500px;
 }
 
 
-.recent{
+.recent {
     padding-right: 12px;
     padding-top: 10px;
 }
 
-.recent-work{
+
+.recent-work {
     color: #2B2E63;
     display: flex;
-    margin-left: 30px;
+    margin-left: 50px;
     margin-top: 58px;
-    
 }
 
 
-.recent-line{
+.recent-line {
     color: #2B2E63;
-    width: 79.5px;
+    width: 200px;
     height: 0px;
     border: 0.924433px solid #ACAEB6;
     margin-top: 44px;
     margin-right: 45px;
 }
 
-.recent-numbers{
+.recent-numbers {
     display: flex;
-
 }
 
-.num1{
-    margin-right: 5px;
+.num1 {
+    margin-right: 150px;
     color: #2B2E63;
 }
 
-.my-story{
+.my-story {
     display: flex;
 }
 
-.story-info p{
+
+.story-info p {
     color: #49909F;
     padding: 35px;
     font-weight: 400;
-        font-size: 16px;
-        line-height: 150%
+    font-size: 16px;
+    line-height: 150%
 }
 
-.story-line{
+
+.story-line {
     color: #2B2E63;
-        width: 1000px;
-        height: 0px;
-        border: 0.924433px solid #ACAEB6;
-        margin-top: 120px;
+    width: 1000px;
+    height: 0px;
+    border: 0.924433px solid #ACAEB6;
+    margin-top: 120px;
 }
 
-.story-head{
+
+.story-head {
     padding: 30px;
     color: #57ADBF;
     padding-top: 60px;
 }
 
-.look-head{
+.look-head {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -174,251 +150,270 @@ footer{
 
 .look-head h1 {
     font-weight: 700;
-        font-size: 40px;
-        line-height: 47px;
-        color: #57ADBF;
+    font-size: 40px;
+    line-height: 47px;
+    color: #57ADBF;
 }
+
 
 .look-head p {
     font-weight: 400;
-        font-size: 16px;
-        line-height: 60%;
-        color: #49909F;
+    font-size: 16px;
+    line-height: 60%;
+    color: #49909F;
 }
 
-
-.blue-div{
-    /* width: 720px;
-        background: #49909F;
-        position: relative; */
-
-    width: 720px;
-        height: 424px;
-       overflow: visible;
-       margin-top: 170px;
-       margin-left: 23px;
-       margin-right: 23px;   
-        /* Additional Colours/700 */
-    
-        background: #49909F;
-
+.blue-div {
+    width: 1290px;
+    height: 424px;
+    overflow: visible;
+    margin-top: 170px;
+    margin-left: 23px;
+    margin-right: 23px;
+    background: #49909F;
 }
 
-.blue-details1{
+.blue-details1 {
     position: absolute;
-    top: 1300px;
+    top: 1200px;
     left: 32px;
 }
-/* 
-.check-img{
-    padding-top: -200px;
-} */
 
 .blue-details p {
     padding-left: 10px;
     font-weight: 400;
-        font-size: 16px;
+    font-size: 16px;
 }
 
 
 .blue-details2 {
     position: absolute;
-    top: 1300px;
-    left: 320px;
+    top: 1200px;
+    left: 482px;
 }
+
 
 .blue-details3 {
     position: absolute;
-    top: 1300px;
-    left: 602px;
+    top: 1200px;
+    left: 932px;
 }
 
-.first-p{
+.first-p {
     padding-left: 10px;
     font-weight: 400;
-        font-size: 16px;
-        line-height: 150%;
-        color: #C7E4EA;
+    font-size: 16px;
+    line-height: 150%;
+    color: #C7E4EA;
 }
 
-.second-p{
+.second-p {
     padding-left: 10px;
     font-weight: 400;
-        font-size: 16px;
-        line-height: 150%;
-        color: #C7E4EA;
+    font-size: 16px;
+    line-height: 150%;
+    color: #C7E4EA;
 }
 
-.third-p{
+
+.third-p {
 
     font-weight: 400;
-        font-size: 16px;
-        line-height: 150%;
-        color: #C7E4EA;
+    font-size: 16px;
+    line-height: 150%;
+    color: #C7E4EA;
 }
+
 
 .blue-details4 {
     position: absolute;
-    top: 1880px;
+    top: 1800px;
     left: 32px;
 }
 
 .blue-details5 {
     position: absolute;
-    top: 1880px;
-    left: 320px;
+    top: 1800px;
+    left: 482px;
 }
 
 .blue-details6 {
     position: absolute;
-    top: 1880px;
-    left: 602px;
+    top: 1800px;
+    left: 932px;
 }
 
-.view-more{
+
+.view-more {
     width: 108px;
-        height: 44px;
-        left: 306px;
-        top: 2281px;
-        background: #C7E4EA;
-        border-radius: 8px;
-        margin-left: 25px;
+    height: 44px;
+    left: 306px;
+    top: 2281px;
+    background: #C7E4EA;
+    border-radius: 8px;
+    margin-left: 25px;
 }
 
-.best-brand{
+.best-brand {
     font-weight: 700;
-font-size: 40px;
-line-height: 47px;
-margin-left: 135px;
-
-color: #090914;
+    font-size: 40px;
+    line-height: 47px;
+    margin-left: 335px;
+    color: #090914;
 }
 
-.client-body{
-    
+.client-body {
     margin-left: 23px;
     margin-right: 23px;
     background: #DDEFF2;
-        opacity: 0.75;
-        padding-bottom: 18px;
+    opacity: 0.75;
+    padding-bottom: 18px;
 }
 
-.client-say{
+
+.client-say {
     margin-right: 56px;
-    margin-left: 56px;
+    margin-left: 270px;
 }
 
 
 .client-say h1 {
     font-weight: 700;
-        font-size: 40px;
-        line-height: 47px;
-        color: #292A2C;
+    font-size: 40px;
+    line-height: 47px;
+    color: #292A2C;
 }
+
 
 .client-say p {
     font-weight: 400;
-        font-size: 16px;
-        line-height: 150%;
-        color: #292A2C;
+    font-size: 16px;
+    line-height: 150%;
+    color: #292A2C;
 }
 
-.client-img1{
+
+.client-img1 {
     display: flex;
     justify-content: space-around;
     margin-bottom: 18px;
 }
 
-.got-project{
-    width: 720px;
-        height: 495px;
-    display: flex;   
+.got-project {
+
+    width: 1280px;
+    height: 495px;
+    display: flex;
     flex-direction: row;
     margin-right: 23px;
     margin-left: 23px;
     font-weight: 600;
-        font-size: 16px;
-        line-height: 150%;
+    font-size: 16px;
+    line-height: 150%;
     margin-top: 57px;
-        color: #49909F;
-    background: url("./images/Rectangle_119.png");    
-    
+    color: #49909F;
+    background: url("./images/Rectangle_119.png");
 }
 
- 
-.div-1{
+
+.div-1 {
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 400px;
+    width: 640px;
     padding-left: 61px;
     line-height: 21px;
 
-} 
-
-.msg{
-    color: #C7E4EA;
-    background-color: #49909F; 
-    width: 108px;
-        height: 44px;
-        border-radius: 8px;
-        margin-top: 10px;
 }
 
-.mail{
+form{
+    width: 200px;
+}
+
+input{
+    width: 300px;
+}
+
+
+.msg {
+
+    color: #C7E4EA;
+    background-color: #49909F;
+    width: 108px;
+    height: 44px;
+    border-radius: 8px;
+    margin-top: 10px;
+}
+
+.mail {
+
     margin-top: 11px;
     margin-bottom: 11px;
     padding-top: 15px;
 }
 
-.div-2{
+
+.div-2 {
+
     padding-top: 122px;
     padding-left: 200px;
 }
 
-.div-22{
+.div-22 {
+
     padding-top: 200px;
-    padding-left: 100px;
+    padding-left: 420px;
 }
 
-input{
+
+input {
     border-radius: 5px;
+
 }
 
 textarea {
-    border-radius: 5px;
+
+    border-radius: 15px;
 }
 
-.lets-connect{
+
+
+.lets-connect {
+
     margin-top: 52px;
     margin-bottom: 46px;
+
 }
 
-.connect-head{
+
+.connect-head {
+
     font-weight: 700;
-        font-size: 32px;
-        line-height: 37px;
-    margin-left: 250px;
-        color: #49909F;
+    font-size: 32px;
+    line-height: 37px;
+    margin-left: 500px;
+    color: #49909F;
+
 }
 
-.connect-socials{
+.connect-socials {
+
     border: ipx solid black;
     display: flex;
-margin-left: 23px;
-margin-right: 23px;
-margin-top: 30px;
+    margin-left: 180px;
+    margin-right: 23px;
+    margin-top: 30px;
 }
 
-.socials1{
-width: 251.14px;
+
+.socials1 {
+
+    width: 251.14px;
     height: 53.1px;
     left: 9px;
     top: 3677px;
-
-    /* Neutral/100 */
-
     background: #F5F6F8;
     box-shadow: 0px 9.40606px 47.0303px rgba(0, 0, 0, 0.25);
     display: flex;
@@ -432,36 +427,39 @@ width: 251.14px;
 }
 
 
-.social-underline{
-    width: 719px;
-        height: 0px;
-        left: 0px;
-        top: 3912px;
-    
-        /* Neutral/700 */
-    
-        border: 1px solid #ACAEB6;
-        margin-top: 56px;
-        margin-bottom: 27px;
-        margin-left: 23px;
-        margin-right: 23px;
+.social-underline {
+
+    width: 1280px;
+    height: 0px;
+    left: 0px;
+    top: 3912px;
+    border: 1px solid #ACAEB6;
+    margin-top: 56px;
+    margin-bottom: 27px;
+    margin-left: 23px;
+    margin-right: 23px;
 }
 
+.last-div {
 
-.last-div{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
 }
 
-.last-underline{
+.last-underline {
+
     width: 100px;
-        height: 0px;
+    height: 0px;
     margin-top: 5px;
-        border: 1px solid #000000;
+    border: 1px solid #000000;
+
 }
 
-.last-p{
+.last-p {
+
     margin-top: 8px;
+
 }
