--- a/template/blogPage/index.html
+++ b/template/blogPage/index.html
@@ -9,7 +9,7 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
   <link rel="icon" type="image/x-icon" href="../images/webBuildr.png" />
   <link rel="stylesheet" href="../style.css" />
-  <link rel="stylesheet" href="portfolio.css" />
+  <link rel="stylesheet" href="blog.css" />
   <title>WebBuildr | Portfolio page</title>
 </head>
 
