--- a/template/templates_folder/blog/blog.html
+++ b/template/templates_folder/blog/blog.html
@@ -43,7 +43,7 @@
 
                     <!--blog section-->
                     <div class="logo">
-                        <img src="./images/rectangle23.png" alt="" />
+                        <img src="./images/rectangle24.jpg" alt="" />
                     </div>
                     <div class="share">
                         <h3>Share my world with Me</h3>
@@ -52,6 +52,9 @@
                     <div class="picture">
                         <h4>.. in pictures </h4>
                     </div> 
+
+                    <div class="lastest"><p><a href="#">View Lastest Posts</a></p></div>
+
                     <div class="rectangle4"></div>
 
                     <div class="row">
