--- a/template/templates_folder/blog/blog.css
+++ b/template/templates_folder/blog/blog.css
@@ -93,16 +93,16 @@ a {
 
   section {
     width: 850px;
-    height: 3250px;
+    height: 3190px;
     left: 10px;
     top: 0px; 
-    margin-left: 215px;
+    margin-left: 80px;
     background: #FFFFFF;
     box-shadow: #FFFFFF;
   }
   
 .rectangle1 {
-    width: 850px;
+    width: 1100px;
     height: 16px;
     left: -7px;
     top: 190px; 
@@ -120,7 +120,7 @@ a {
 }
 
 .rectangle2 {
-    width: 850px;
+    width: 1100px;
     height: 3154px;
     left: 2px;
     top: 190px; 
@@ -132,7 +132,7 @@ a {
 }
 
 .rectangle3 {
-    width: 809px;
+    width: 1055px;
     height: 3054px;
     left: -7px;
     top: 183px; 
@@ -155,8 +155,8 @@ a {
     font-weight: 700;
     font-size: 50px;
     line-height: 58px;
-    margin-left: 160px;
-    margin-top: -270px;
+    margin-left: 275px;
+    margin-top: -250px;
     color: #282f42;
 }
     
@@ -168,7 +168,7 @@ a {
     left: 306px;
     top: 210px;
     margin-left: 250px;
-    margin-top: 200px;
+    margin-top: 215px;
     
     /*styleName: Body text (large) Semibold */
     font-family: 'Campton';
@@ -179,8 +179,45 @@ a {
     color: #282f42;
 }
 
+.lastest {
+    position: absolute;
+    width: 182px;
+    height: 39px;
+    left: 31px;
+    top: 684px; 
+    background: #292a2c;
+    border-radius: 10px;
+    margin-left: 524px;
+    margin-top: -210px;
+    border-radius: 8px;
+    border-color: #292a2c;
+}
+
+.lastest p {
+    /*introduction*/
+    position: absolute;
+    height: 21px;
+    width: 112px;
+    left: 58px;
+    top: 696px;
+    margin-left: -28px;
+    margin-top: -687px;
+    
+    /*styleName: Body text (large) Semibold */
+    font-family: 'Campton';
+    font-style: normal;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 150%;
+    color: #e4e8f3;
+}
+
+.lastest a {
+    color: #e4e8f3;
+}
+
 .rectangle4 {
-    width: 809px;
+    width: 1055px;
     height: 128px;
     left: -7px;
     top: 183px; 
@@ -205,9 +242,10 @@ a {
     width: auto;
     height: 24px;
     top: 490px;
-    left: 101px;
+    left: 95px;
     margin-top: -135px;
-    margin-left: 68px;
+    margin-left: 45px;
+    margin-inline-end: 80px;
     color: #454649;
 
     font-family: 'Campton';
@@ -259,13 +297,13 @@ a{
 /* food cravings */
 .food img{
     position: absolute;
-    width: 361px;
-    height: auto;
+    width: 400px;
+    height: 400px;
     left: 19px;
     top: 670px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     border-radius: 20px;
-    margin-left: 250px;
+    margin-left: 170px;
     margin-top: 217px;
 }
 
@@ -277,7 +315,7 @@ a{
     top: 684px; 
     background: #d9d9d9;
     border-radius: 10px;
-    margin-left: 250px;
+    margin-left: 170px;
     margin-top: 220px;
     border-color: #d9d9d9;
 }
@@ -308,7 +346,7 @@ a{
      width: 152px;
      left: 28px;
      top: 855px;
-     margin-left: 250px;
+     margin-left: 170px;
      margin-top: 229px;
      
      /*styleName: Body text (large) Semibold */
@@ -327,7 +365,7 @@ a{
     width: 144px;
     left: 32px;
     top: 883px;
-    margin-left: 250px;
+    margin-left: 170px;
     margin-top: 229px;
     
     /*styleName: Body text (large) Semibold */
@@ -346,8 +384,8 @@ a{
     left: 29px;
     top: 969px;
     border-radius: 20px;
-    margin-left: 250px;
-    margin-top: 240px;
+    margin-left: 170px;
+    margin-top: 255px;
 }
 
 .anna h4{
@@ -357,8 +395,8 @@ a{
     width: 103px;
     left: 92px;
     top: 1001px;
-    margin-left: 250px;
-    margin-top: 235px;
+    margin-left: 170px;
+    margin-top: 255px;
     
     /*styleName: Body text (large) Semibold */
     font-family: 'Campton';
@@ -376,8 +414,8 @@ a{
     width: 98px;
     left: 269px;
     top: 1000px;
-    margin-left: 250px;
-    margin-top: 235px;
+    margin-left: 170px;
+    margin-top: 255px;
     
     /*styleName: Body text (large) Semibold */
     font-family: 'Campton';
@@ -393,13 +431,13 @@ a{
 /* travel */
 .travel img{
     position: absolute;
-    width: 361px;
-    height: 380px;
+    width: 400px;
+    height: 400px;
     left: 401px;
     top: 670px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     border-radius: 20px;
-    margin-left: 275px;
+    margin-left: 299px;
     margin-top: 217px;
 }
 
@@ -411,7 +449,7 @@ a{
     top: 684px; 
     background: #d9d9d9;
     border-radius: 10px;
-    margin-left: 275px;
+    margin-left: 299px;
     margin-top: 220px;
     border-color: #d9d9d9;
 }
@@ -442,7 +480,7 @@ a{
      width: 152px;
      left: 417px;
      top: 855px;
-     margin-left: 273px;
+     margin-left: 299px;
      margin-top: 229px;
      
      /*styleName: Body text (large) Semibold */
@@ -461,7 +499,7 @@ a{
     width: 144px;
     left: 418px;
     top: 883px;
-    margin-left: 273px;
+    margin-left: 299px;
     margin-top: 229px;
     
     /*styleName: Body text (large) Semibold */
@@ -480,8 +518,8 @@ a{
     left: 414px;
     top: 969px;
     border-radius: 20px;
-    margin-left: 275px;
-    margin-top: 240px;
+    margin-left: 299px;
+    margin-top: 255px;
 }
 
 .ben h4{
@@ -491,8 +529,8 @@ a{
     width: 103px;
     left: 486px;
     top: 1001px;
-    margin-left: 275px;
-    margin-top: 235px;
+    margin-left: 299px;
+    margin-top: 255px;
     
     /*styleName: Body text (large) Semibold */
     font-family: 'Campton';
@@ -510,8 +548,8 @@ a{
     width: 98px;
     left: 653px;
     top: 1000px;
-    margin-left: 275px;
-    margin-top: 235px;
+    margin-left: 320px;
+    margin-top: 255px;
     
     /*styleName: Body text (large) Semibold */
     font-family: 'Campton';
@@ -561,25 +599,26 @@ a{
 
 .rec_fas {
     position: absolute;
-    width: 379px;
+    width: 400px;
     height: 466px;
     left: 17px;
     top: 1234px; 
     background: #bcc6e2;
-    margin-left: 250px;
+    margin-left: 170px;
     margin-top: 217px;
     border-color: #dee0e6;
     border-radius: 20px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .fashion img{
     position: absolute;
-    width: 379px;
+    width: 400px;
     height: 267;
     left: 17px;
     top: 1234px;
     border-radius: 20px 20px 0px 0px;
-    margin-left: 250px;
+    margin-left: 170px;
     margin-top: 217px;
 }
 
@@ -591,7 +630,7 @@ a{
     top: 1250px; 
     background: #acaeb6;
     border-radius: 10px;
-    margin-left: 250px;
+    margin-left: 170px;
     margin-top: 220px;
     border-color: #d9d9d9;
 }
@@ -622,7 +661,7 @@ a{
      width: 296px;
      left: 30px;
      top: 1485px;
-     margin-left: 250px;
+     margin-left: 170px;
      margin-top: 229px;
      
      /*styleName: Body text (large) Semibold */
@@ -641,7 +680,7 @@ a{
     width: 226px;
     left: 30px;
     top: 1510px;
-    margin-left: 250px;
+    margin-left: 170px;
     margin-top: 229px;
     
     /*styleName: Body text (large) Semibold */
@@ -660,7 +699,7 @@ a{
     left: 27px;
     top: 1593px;
     border-radius: 20px;
-    margin-left: 250px;
+    margin-left: 170px;
     margin-top: 265px;
 }
 
@@ -671,7 +710,7 @@ a{
     width: 116px;
     left: 84px;
     top: 1615px;
-    margin-left: 250px;
+    margin-left: 170px;
     margin-top: 265px;
     
     /*styleName: Body text (large) Semibold */
@@ -690,7 +729,7 @@ a{
     width: 98px;
     left: 269px;
     top: 1614px;
-    margin-left: 260px;
+    margin-left: 170px;
     margin-top: 265px;
     
     /*styleName: Body text (large) Semibold */
@@ -708,25 +747,26 @@ a{
 
 .rec_lov {
     position: absolute;
-    width: 379px;
+    width: 400px;
     height: 466px;
     left: 403px;
     top: 1191px; 
     background: #bcc6e2;
-    margin-left: 255px;
+    margin-left: 299px;
     margin-top: 260px;
     border-color: #dee0e6;
     border-radius: 20px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .lovers img {
     position: absolute;
-    width: 380px;
+    width: 400px;
     height: 254px;
     left: 403px;
     top: 1234px;
     border-radius: 20px 20px 0px 0px;
-    margin-left: 255px;
+    margin-left: 299px;
     margin-top: 217px;
 }
 
@@ -738,7 +778,7 @@ a{
     top: 1250px; 
     background: #acaeb6;
     border-radius: 10px;
-    margin-left: 255px;
+    margin-left: 299px;
     margin-top: 220px;
     border-color: #d9d9d9;
 }
@@ -769,7 +809,7 @@ a{
     width: 296px;
     left: 420px;
     top: 1475px;
-    margin-left: 255px;
+    margin-left: 299px;
     margin-top: 235px;
     
     /*styleName: Body text (large) Semibold */
@@ -788,7 +828,7 @@ a{
     width: 311px;
     left: 421px;
     top: 1500px;
-    margin-left: 255px;
+    margin-left: 299px;
     margin-top: 235px;
     
     /*styleName: Body text (large) Semibold */
@@ -807,7 +847,7 @@ a{
     left: 427px;
     top: 1593px;
     border-radius: 20px;
-    margin-left: 255px;
+    margin-left: 299px;
     margin-top: 265px;
 } 
 
@@ -819,7 +859,7 @@ a{
     width: 116px;
     left: 481px;
     top: 1615px;
-    margin-left: 255px;
+    margin-left: 299px;
     margin-top: 265px;
     
     /*styleName: Body text (large) Semibold */
@@ -838,7 +878,7 @@ a{
     width: 98px;
     left: 667px;
     top: 1614px;
-    margin-left: 255px;
+    margin-left: 320px;
     margin-top: 265px;
     
     /*styleName: Body text (large) Semibold */
@@ -855,25 +895,26 @@ a{
 
 .rec_wor {
     position: absolute;
-    width: 379px;
+    width: 400px;
     height: 466px;
     left: 17px;
     top: 1741px; 
     background: #bcc6e2;
-    margin-left: 250px;
+    margin-left: 170px;
     margin-top: 217px;
     border-color: #dee0e6;
     border-radius: 20px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .world img{
     position: absolute;
-    width: 379px;
+    width: 400px;
     height: 244.41px;
     left: 17px;
     top: 1741px;
     border-radius: 20px 20px 0px 0px;
-    margin-left: 250px;
+    margin-left: 170px;
     margin-top: 217px;
 }
 
@@ -885,7 +926,7 @@ a{
     top: 1756px; 
     background: #acaeb6;
     border-radius: 10px;
-    margin-left: 250px;
+    margin-left: 170px;
     margin-top: 220px;
     border-color: #d9d9d9;
 }
@@ -916,7 +957,7 @@ a{
     width: 296px;
     left: 36px;
     top: 2011px;
-    margin-left: 250px;
+    margin-left: 170px;
     margin-top: 200px;
     
     /*styleName: Body text (large) Semibold */
@@ -935,7 +976,7 @@ a{
     width: 257px;
     left: 36px;
     top: 2039px;
-    margin-left: 250px;
+    margin-left: 170px;
     margin-top: 200px;
     
     /*styleName: Body text (large) Semibold */
@@ -954,7 +995,7 @@ a{
     left: 27px;
     top: 2145px;
     border-radius: 20px;
-    margin-left: 250px;
+    margin-left: 170px;
     margin-top: 215px;
 } 
 
@@ -966,7 +1007,7 @@ a{
     width: 116px;
     left: 86px;
     top: 2165px;
-    margin-left: 250px;
+    margin-left: 170px;
     margin-top: 215px;
     
     /*styleName: Body text (large) Semibold */
@@ -985,7 +1026,7 @@ a{
     width: 98px;
     left: 268px;
     top: 2164px;
-    margin-left: 250px;
+    margin-left: 170px;
     margin-top: 215px;
     
     /*styleName: Body text (large) Semibold */
@@ -1000,25 +1041,26 @@ a{
 
 .rec_photo {
     position: absolute;
-    width: 379px;
+    width: 400px;
     height: 466px;
     left: 403px;
     top: 1741px; 
     background: #bcc6e2;
-    margin-left: 255px;
+    margin-left: 299px;
     margin-top: 217px;
     border-color: #dee0e6;
     border-radius: 20px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .photo img{
     position: absolute;
-    width: 379px;
+    width: 400px;
     height: 244.41px;
     left: 403px;
     top: 1741px;
     border-radius: 20px 20px 0px 0px;
-    margin-left: 255px;
+    margin-left: 299px;
     margin-top: 217px;
 }
 
@@ -1026,11 +1068,11 @@ a{
     position: absolute;
     width: 147px;
     height: 45px;
-    left: 435px;
+    left: 430px;
     top: 1756px; 
     background: #acaeb6;
     border-radius: 10px;
-    margin-left: 255px;
+    margin-left: 289px;
     margin-top: 220px;
     border-color: #d9d9d9;
 }
@@ -1061,7 +1103,7 @@ a{
     width: 296px;
     left: 418px;
     top: 2011px;
-    margin-left: 255px;
+    margin-left: 299px;
     margin-top: 200px;
     
     /*styleName: Body text (large) Semibold */
@@ -1080,7 +1122,7 @@ a{
     width: 257px;
     left: 418px;
     top: 2039px;
-    margin-left: 255px;
+    margin-left: 299px;
     margin-top: 200px;
     
     /*styleName: Body text (large) Semibold */
@@ -1099,7 +1141,7 @@ a{
     left: 418px;
     top: 2145px;
     border-radius: 20px;
-    margin-left: 255px;
+    margin-left: 299px;
     margin-top: 215px;
 } 
 
@@ -1111,7 +1153,7 @@ a{
     width: 116px;
     left: 480px;
     top: 2165px;
-    margin-left: 255px;
+    margin-left: 299px;
     margin-top: 215px;
     
     /*styleName: Body text (large) Semibold */
@@ -1130,7 +1172,7 @@ a{
     width: 98px;
     left: 659px;
     top: 2164px;
-    margin-left: 260px;
+    margin-left: 320px;
     margin-top: 215px;
     
     /*styleName: Body text (large) Semibold */
@@ -1146,25 +1188,26 @@ a{
 
 .rec_vis {
     position: absolute;
-    width: 379px;
+    width: 400px;
     height: 466px;
     left: 17px;
     top: 2271px; 
     background: #bcc6e2;
-    margin-left: 250px;
+    margin-left: 170px;
     margin-top: 190px;
     border-color: #dee0e6;
     border-radius: 20px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .visat img{
     position: absolute;
-    width: 379px;
+    width: 400px;
     height: 244.41px;
     left: 17px;
     top: 2271px;
     border-radius: 20px 20px 0px 0px;
-    margin-left: 250px;
+    margin-left: 170px;
     margin-top: 190px;
 }
 
@@ -1176,7 +1219,7 @@ a{
     top: 2295px; 
     background: #acaeb6;
     border-radius: 10px;
-    margin-left: 250px;
+    margin-left: 170px;
     margin-top: 190px;
     border-color: #d9d9d9;
 }
@@ -1207,7 +1250,7 @@ a{
     width: 296px;
     left: 31px;
     top: 2551px;
-    margin-left: 250px;
+    margin-left: 170px;
     margin-top: 165px;
     
     /*styleName: Body text (large) Semibold */
@@ -1226,7 +1269,7 @@ a{
     width: 112px;
     left: 29px;
     top: 2572px;
-    margin-left: 250px;
+    margin-left: 170px;
     margin-top: 175px;
     
     /*styleName: Body text (large) Semibold */
@@ -1245,7 +1288,7 @@ a{
     left: 27px;
     top: 2685px;
     border-radius: 20px;
-    margin-left: 250px;
+    margin-left: 170px;
     margin-top: 180px;
 } 
 
@@ -1257,7 +1300,7 @@ a{
     width: 116px;
     left: 92px;
     top: 2685px;
-    margin-left: 250px;
+    margin-left: 170px;
     margin-top: 200px;
     
     /*styleName: Body text (large) Semibold */
@@ -1276,7 +1319,7 @@ a{
     width: 98px;
     left: 268px;
     top: 2685px;
-    margin-left: 250px;
+    margin-left: 170px;
     margin-top: 200px;
     
     /*styleName: Body text (large) Semibold */
@@ -1290,25 +1333,26 @@ a{
 
 .rec_make {
     position: absolute;
-    width: 379px;
+    width: 400px;
     height: 466px;
     left: 405px;
     top: 2271px; 
     background: #bcc6e2;
-    margin-left: 255px;
+    margin-left: 299px;
     margin-top: 190px;
     border-color: #dee0e6;
     border-radius: 20px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 
 .make img{
     position: absolute;
-    width: 379px;
+    width: 400px;
     height: 244.41px;
     left: 405px;
     top: 2271px;
     border-radius: 20px 20px 0px 0px;
-    margin-left: 255px;
+    margin-left: 299px;
     margin-top: 190px;
 }
 
@@ -1320,7 +1364,7 @@ a{
     top: 2295px; 
     background: #acaeb6;
     border-radius: 10px;
-    margin-left: 255px;
+    margin-left: 299px;
     margin-top: 190px;
     border-color: #d9d9d9;
 }
@@ -1351,7 +1395,7 @@ a{
     width: 296px;
     left: 418px;
     top: 2551px;
-    margin-left: 255px;
+    margin-left: 299px;
     margin-top: 165px;
     
     /*styleName: Body text (large) Semibold */
@@ -1370,7 +1414,7 @@ a{
     width: 112px;
     left: 418px;
     top: 2572px;
-    margin-left: 255px;
+    margin-left: 299px;
     margin-top: 175px;
     
     /*styleName: Body text (large) Semibold */
@@ -1389,7 +1433,7 @@ a{
     left: 418px;
     top: 2685px;
     border-radius: 20px;
-    margin-left: 255px;
+    margin-left: 299px;
     margin-top: 180px;
 } 
 
@@ -1401,7 +1445,7 @@ a{
     width: 116px;
     left: 481px;
     top: 2685px;
-    margin-left: 255px;
+    margin-left: 299px;
     margin-top: 200px;
     
     /*styleName: Body text (large) Semibold */
@@ -1420,7 +1464,7 @@ a{
     width: 98px;
     left: 668px;
     top: 2685px;
-    margin-left: 255px;
+    margin-left: 320px;
     margin-top: 200px;
     
     /*styleName: Body text (large) Semibold */
@@ -1432,6 +1476,7 @@ a{
     color: #292a2c;
 }
 
+/*stay*/
 .stay p {
     /*introduction*/
     position: absolute;
@@ -1439,7 +1484,7 @@ a{
     width: 296px;
     left: 316px;
     top: 2800px;
-    margin-left: 256px;
+    margin-left: 276px;
     margin-top: 220px;
     
     /*styleName: Body text (large) Semibold */
@@ -1457,7 +1502,7 @@ a{
     height: 0px;
     left: 316px;
     top: 2830px;
-    margin-left: 256px;
+    margin-left: 276px;
     margin-top: 217px;
     color: #000000;
 
@@ -1470,7 +1515,7 @@ a{
     width: 174px;
     left: 316px;
     top: 2800px;
-    margin-left: 230px;
+    margin-left: 250px;
     margin-top: 250px;
     
     /*styleName: Body text (large) Semibold */
@@ -1489,7 +1534,7 @@ a{
     width: 162px;
     left: 316px;
     top: 3000px;
-    margin-left: 250px;
+    margin-left: 255px;
     margin-top: 230px;
     
     /*styleName: Body text (large) Semibold */
