--- a/cmsapp/templates/cmsapp/404.html
+++ b/cmsapp/templates/cmsapp/404.html
@@ -1,10 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./404.css" />
+    <link rel="stylesheet" href="{% static '404/404.css' %}" />
     <title>404 | Page not found</title>
   </head>
   <body>
@@ -14,7 +15,7 @@
       </div>
       <div class="notfound-container">
         <div class="notfound-svg-wrap">
-          <img src="./assets/notfound.svg" alt="404" class="notfound-svg-img" />
+          <img src="{% static '404/assets/notfound.svg' %}" alt="404" class="notfound-svg-img" />
         </div>
         <div class="notfound-btn-wrap">
           <div class="notfound-btn1">
