--- a/template/templates_folder/newportfolio/index.html
+++ b/template/templates_folder/newportfolio/index.html
@@ -10,28 +10,27 @@
 
  </head>
  <body>
-    <!-- <header> -->  
-<!-- 
-<nav class="navbar">
-    <div class="back">
-        <p>Back</p>
-        <div class="destop">
-            <img src="./images/destop.png">
+   <div class="underline"></div>
+    <!-- <header class="port-temp-header">
+      <nav class="port-temp-navbar">
+        <div class="port-temp-back">
+          <p>Back</p>
+          <div class="port-temp-desktop">
+            <img src="./images/desktop.svg" class="port-temp-desktop-img" />
+          </div>
+          <div class="tablet">
+            <img src="./images/tablet.svg" class="port-temp-desktop-img" />
+          </div>
+          <div class="phone">
+            <img src="./images/phone.svg" class="port-temp-desktop-img" />
+          </div>
         </div>
-        <div class="tablet">
-            <img src="./images/tablet.png">
-        </div>
-        <div class="phone">
-            <img src="./images/phone.png">
-        </div>
-    </div>
 
-    <div class="nav-btns">
-        <button>Start with this Design</button>
-    </div>
-</nav>  -->
-
-    <!-- </header> -->
+        <div class="port-temp-nav-btn">
+          <button>Start with this Design</button>
+        </div>
+      </nav>
+    </header> -->
 
     <div class="portfolio-details">
         <div class="underline"></div>
