--- a/template/templates_folder/portfolio/index.html
+++ b/template/templates_folder/portfolio/index.html
@@ -87,7 +87,7 @@
         </div>
       </section>
 
-      <div class="my-story">
+      <section class="my-story">
         <div class="story-info">
           <p>
             I am a skilled Information Security Analyst with expertise in risk
@@ -105,9 +105,9 @@
           <h1>My STORY</h1>
           <p>My works</p>
         </div>
-      </div>
+      </section>
 
-      <div class="portfolio-look">
+      <!-- <section class="portfolio-look">
         <div class="look-head">
           <h1>Let's Take A Look at My Portfolio</h1>
           <p>ication, and people skills. Able to thrive in fast-paced and</p>
@@ -155,7 +155,7 @@
             <p class="third-p">in France, Greece, Tu</p>
           </div>
         </div>
-      </div>
+      </section>
 
       <div>
         <h1 class="best-brand">Working with the best brand</h1>
@@ -248,7 +248,7 @@
         @copyright&copy;2022
         <div class="last-underline"></div>
         <p class="last-p">Made with WebBuildr</p>
-      </div>
+      </div> -->
     </main>
   </body>
 </html>
