linked error template to some views

--- a/cmsapp/templates/cmsapp/404.html
+++ b/cmsapp/templates/cmsapp/404.html
@@ -19,7 +19,7 @@
         </div>
         <div class="notfound-btn-wrap">
           <div class="notfound-btn1">
-            <a href="#" class="notfound-btn-link"> Go to Home </a>
+            <a href="{% url 'cmsapp:landingpage' %}" class="notfound-btn-link"> Go to Home </a>
           </div>
           <div class="notfound-btn2">
             <a href="#" class="notfound-btn-link cl2"> Previous Page </a>
